--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -110,9 +110,12 @@ dependencies {
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
+
+        implementation project(':react-native-vector-icons')
     } else {
         implementation jscFlavor
     }
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
