--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -17,6 +20,7 @@
     "react-native": "0.74.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.3.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
