--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.3.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-video": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
